{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 68,
  "lineage": "c16c11f9-2eaa-9dc2-e71b-5c0f2a7a71c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cozy_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d3bacf9fdf57b37",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:elastic-ip/eipalloc-04d3bacf9fdf57b37",
            "associate_with_private_ip": "true",
            "association_id": "eipassoc-0d62158a5cee4f6ba",
            "domain": "vpc",
            "id": "eipalloc-04d3bacf9fdf57b37",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-075668b8c50305df3",
            "private_dns": "ip-10-0-1-236.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-43-203-105-142.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.105.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-nat-eip"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cozy-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa4e2be59309ae9d",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:instance/i-092a6696e9487718e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092a6696e9487718e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cozy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037d45dbc061c52fa",
            "private_dns": "ip-10-0-1-191.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_ip": "13.125.243.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7b88af6a1a3dd6c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31b9053be92eae2",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-bastion"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac19d7f95c37f73e"
            ]
          },
          "dependencies": [
            "aws_security_group.cozy_vpc_sg",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cozy-gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea824b857e791495",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:instance/i-0c5d90e06f89b3dfb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cozy-ec2-profile",
            "id": "i-0c5d90e06f89b3dfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "cozy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7aafb09865b8143",
            "private_dns": "ip-10-0-3-14.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc90c9c655277cef",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a476f2f772e290d3",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-gitlab"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-gitlab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a27caf4bef0be098"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.cozy_ec2_profile",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cozy-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c8dc4d24f067f43d",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:instance/i-0d6f07dd400ff9796",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cozy-ec2-profile",
            "id": "i-0d6f07dd400ff9796",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cozy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086a5bb3f9e4d42b0",
            "private_dns": "ip-10-0-3-123.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05875abc6093ef5e7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a476f2f772e290d3",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-jenkins"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a27caf4bef0be098"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.cozy_ec2_profile",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cozy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:internet-gateway/igw-047d1e23068278d22",
            "id": "igw-047d1e23068278d22",
            "owner_id": "151564769076",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-igw"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-igw"
            },
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cozy_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/cozy-alb/b1cc6a22976f9984",
            "arn_suffix": "app/cozy-alb/b1cc6a22976f9984",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cozy-alb-468616511.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/cozy-alb/b1cc6a22976f9984",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cozy-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a27caf4bef0be098"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08817e475c3ca8263"
              },
              {
                "subnet_id": "subnet-0f31b9053be92eae2"
              }
            ],
            "subnets": [
              "subnet-08817e475c3ca8263",
              "subnet-0f31b9053be92eae2"
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-alb"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-alb"
            },
            "vpc_id": "vpc-05de49e32804cc76e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_public_subnet_a",
            "aws_subnet.cozy_public_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/cozy-alb/b1cc6a22976f9984",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cozy_alb",
            "aws_lb_target_group.cozy_jenkins_tg",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_public_subnet_a",
            "aws_subnet.cozy_public_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gitlab_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-gitlab-tg/992eb03d220c6241",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener-rule/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776/c011f6984e83da3a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/gitlab/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener-rule/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776/c011f6984e83da3a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cozy_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.cozy_gitlab_tg",
            "aws_lb_target_group.cozy_jenkins_tg",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_public_subnet_a",
            "aws_subnet.cozy_public_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener-rule/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776/bd06f954d9e4258b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/jenkins/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener-rule/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776/bd06f954d9e4258b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/cozy-alb/b1cc6a22976f9984/35b7c01bbeae9776",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cozy_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.cozy_jenkins_tg",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_public_subnet_a",
            "aws_subnet.cozy_public_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cozy_gitlab_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-gitlab-tg/992eb03d220c6241",
            "arn_suffix": "targetgroup/cozy-gitlab-tg/992eb03d220c6241",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-gitlab-tg/992eb03d220c6241",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/cozy-alb/b1cc6a22976f9984"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cozy-gitlab-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-gitlab-tg"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-gitlab-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cozy_jenkins_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf",
            "arn_suffix": "targetgroup/cozy-jenkins-tg/763c35b567d81adf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/cozy-alb/b1cc6a22976f9984"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cozy-jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-jenkins-tg"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-jenkins-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "cozy_gitlab_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-gitlab-tg/992eb03d220c6241-20250218020905895700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-gitlab-tg/992eb03d220c6241",
            "target_id": "i-0c5d90e06f89b3dfb"
          },
          "dependencies": [
            "aws_iam_instance_profile.cozy_ec2_profile",
            "aws_instance.cozy-gitlab",
            "aws_lb_target_group.cozy_gitlab_tg",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "cozy_jenkins_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf-20250218020905812800000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/cozy-jenkins-tg/763c35b567d81adf",
            "target_id": "i-0d6f07dd400ff9796"
          },
          "dependencies": [
            "aws_iam_instance_profile.cozy_ec2_profile",
            "aws_instance.cozy-jenkins",
            "aws_lb_target_group.cozy_jenkins_tg",
            "aws_security_group.cozy_cicd_ec2_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cozy_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d3bacf9fdf57b37",
            "association_id": "eipassoc-0d62158a5cee4f6ba",
            "connectivity_type": "public",
            "id": "nat-015b5a88e13500982",
            "network_interface_id": "eni-075668b8c50305df3",
            "private_ip": "10.0.1.236",
            "public_ip": "43.203.105.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f31b9053be92eae2",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-nat-gateway"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.cozy_nat_eip",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cozy_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-02c299c724d3f5842",
            "id": "rtb-02c299c724d3f5842",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015b5a88e13500982",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-private-route-table"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cozy_nat_eip",
            "aws_nat_gateway.cozy_nat_gateway",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cozy_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-0bc9330288461c053",
            "id": "rtb-0bc9330288461c053",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047d1e23068278d22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-public-route-table"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cozy_igw",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cozy_private_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055a686f03965917d",
            "route_table_id": "rtb-02c299c724d3f5842",
            "subnet_id": "subnet-0a476f2f772e290d3"
          },
          "dependencies": [
            "aws_eip.cozy_nat_eip",
            "aws_nat_gateway.cozy_nat_gateway",
            "aws_route_table.cozy_private_route_table",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cozy_private_route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042564493442e22a7",
            "route_table_id": "rtb-02c299c724d3f5842",
            "subnet_id": "subnet-076dbceed3e337aa0"
          },
          "dependencies": [
            "aws_eip.cozy_nat_eip",
            "aws_nat_gateway.cozy_nat_gateway",
            "aws_route_table.cozy_private_route_table",
            "aws_subnet.cozy_private_subnet_b",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cozy_public_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1bc4e3743ee815",
            "route_table_id": "rtb-0bc9330288461c053",
            "subnet_id": "subnet-0f31b9053be92eae2"
          },
          "dependencies": [
            "aws_internet_gateway.cozy_igw",
            "aws_route_table.cozy_public_route_table",
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cozy_public_route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047f3f528b055d851",
            "route_table_id": "rtb-0bc9330288461c053",
            "subnet_id": "subnet-08817e475c3ca8263"
          },
          "dependencies": [
            "aws_internet_gateway.cozy_igw",
            "aws_route_table.cozy_public_route_table",
            "aws_subnet.cozy_public_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cozy_cicd_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0a27caf4bef0be098",
            "description": "Security group for CICD EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a27caf4bef0be098",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cozy-cicd-ec2-sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-cicd-ec2-sg"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-cicd-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.cozy_public_subnet_a",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cozy_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0ac19d7f95c37f73e",
            "description": "Security group for cozy VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac19d7f95c37f73e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cozy-vpc-sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-vpc-sg"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cozy_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0a476f2f772e290d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a476f2f772e290d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-private-subnet-a"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-private-subnet-a"
            },
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cozy_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-076dbceed3e337aa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076dbceed3e337aa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-private-subnet-b"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-private-subnet-b"
            },
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cozy_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0f31b9053be92eae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31b9053be92eae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-public-subnet-a"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-public-subnet-a"
            },
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cozy_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-08817e475c3ca8263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08817e475c3ca8263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-public-subnet-b"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-public-subnet-b"
            },
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cozy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc/vpc-05de49e32804cc76e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077e364e1a0e72377",
            "default_route_table_id": "rtb-03830f3d3fb2bfa22",
            "default_security_group_id": "sg-011d35e4b5498a3d9",
            "dhcp_options_id": "dopt-c9ec46a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05de49e32804cc76e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03830f3d3fb2bfa22",
            "owner_id": "151564769076",
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-vpc"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cozy_ec2messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-03bd88b32dae73f7d",
            "dns_entry": [
              {
                "dns_name": "vpce-03bd88b32dae73f7d-khlzzw9g.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-03bd88b32dae73f7d-khlzzw9g-ap-northeast-2b.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-03bd88b32dae73f7d-khlzzw9g-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03bd88b32dae73f7d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-065925b59e2cde61f",
              "eni-0b557fc9d0100d0e6"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ac19d7f95c37f73e"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.152",
                "subnet_id": "subnet-0a476f2f772e290d3"
              },
              {
                "ipv4": "10.0.4.197",
                "subnet_id": "subnet-076dbceed3e337aa0"
              }
            ],
            "subnet_ids": [
              "subnet-076dbceed3e337aa0",
              "subnet-0a476f2f772e290d3"
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-ec2messages-endpoint"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_security_group.cozy_vpc_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_private_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cozy_ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-096b7b08cc22832b2",
            "dns_entry": [
              {
                "dns_name": "vpce-096b7b08cc22832b2-jv5r7siu.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-096b7b08cc22832b2-jv5r7siu-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-096b7b08cc22832b2-jv5r7siu-ap-northeast-2b.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096b7b08cc22832b2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022b41d88449961f0",
              "eni-051f8ce17263c8261"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ac19d7f95c37f73e"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.146",
                "subnet_id": "subnet-0a476f2f772e290d3"
              },
              {
                "ipv4": "10.0.4.117",
                "subnet_id": "subnet-076dbceed3e337aa0"
              }
            ],
            "subnet_ids": [
              "subnet-076dbceed3e337aa0",
              "subnet-0a476f2f772e290d3"
            ],
            "tags": {
              "Creator": "cozy",
              "Name": "cozy-ssm-endpoint"
            },
            "tags_all": {
              "Creator": "cozy",
              "Name": "cozy-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05de49e32804cc76e"
          },
          "dependencies": [
            "aws_security_group.cozy_vpc_sg",
            "aws_subnet.cozy_private_subnet_a",
            "aws_subnet.cozy_private_subnet_b",
            "aws_vpc.cozy_vpc"
          ]
        }
      ]
    }
  ]
}